-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 16, 17
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8259422 | 17 | Aleksey Shipilev | P2 | Resolved | Fixed | b05 |
| JDK-8260105 | 16.0.1 | Aleksey Shipilev | P2 | Resolved | Fixed | b03 |
This should revert:
Additionally, these issues can be closed as "Not an Issue":
- backported by
-
JDK-8259422 Revert changes for JDK-8252505 and related issues
-
- Resolved
-
-
JDK-8260105 Revert changes for JDK-8252505 and related issues
-
- Resolved
-
- duplicates
-
JDK-8258619 -XX:CompileCommand=blackhole,* should only accept empty static methods
-
- Closed
-
-
JDK-8258101 compiler/blackhole tests fail with -Xcomp
-
- Closed
-
- relates to
-
JDK-8258111 Problemlist compiler/blackhole tests for -Xcomp until JDK-8258101 is fixed
-
- Resolved
-
-
JDK-8257803 Add -Xbatch to compiler/blackhole tests
-
- Resolved
-
-
JDK-8252505 C1/C2 compiler support for blackholes
-
- Resolved
-
-
JDK-8257805 Add compiler/blackhole tests to tier1
-
- Resolved
-
-
JDK-8257848 -XX:CompileCommand=blackhole,* should be diagnostic
-
- Resolved
-
-
JDK-8257827 C1/C2 compiler support for blackholes
-
- Closed
-
-
JDK-8259475 Fix bad merge in compilerOracle
-
- Resolved
-