8258558: Revert changes for JDK-8252505 and related issues

Reviewed-by: kvn