src/hotspot/share/compiler/compilerOracle.hpp
@@ -51,7 +51,6 @@ class methodHandle;
   option(Print, "print", Bool) \
   option(Inline,  "inline", Bool) \
   option(DontInline,  "dontinline", Bool) \
-  option(Blackhole,  "blackhole", Bool) \
   option(CompileOnly, "compileonly", Bool)\
   option(Exclude, "exclude", Bool) \
   option(Break, "break", Bool) \
@@ -141,9 +140,6 @@ class CompilerOracle : AllStatic {
 
   // Tells whether to break when compiling method
   static bool should_break_at(const methodHandle& method);
-
-  // Tells whether to blackhole when compiling method
-  static bool should_blackhole(const methodHandle& method);
 
   // Tells whether there are any methods to print for print_method_statistics()
   static bool should_print_methods();
