src/hotspot/share/opto/regmask.cpp
@@ -51,13 +51,6 @@ void OptoReg::dump(int r, outputStream *st) {
 //=============================================================================
 const RegMask RegMask::Empty;
 
-const RegMask RegMask::All(
-# define BODY(I) -1,
-  FORALL_BODY
-# undef BODY
-  0
-);
-
 //=============================================================================
 bool RegMask::is_vector(uint ireg) {
   return (ireg == Op_VecA || ireg == Op_VecS || ireg == Op_VecD ||
